contacts-page/contacts-page.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts-page
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: contacts-page
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: contacts-page
spec:
  serviceName: contacts-page
  replicas: 1
  selector:
    matchLabels:
      app: contacts-page
  template:
    metadata:
      labels:
        app: contacts-page
    spec:
      containers:
        - name: contacts-page
          image: 010438473788.dkr.ecr.ap-northeast-2.amazonaws.com/utils:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: storage
            mountPath: /src/www/
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 2Gi
